LT#Refactor dae-core service configuration and logging
- Updated Makefile to simplify build commands by removing unnecessary main entry path.
- Refactored main.go to utilize new configuration structure and improved logging initialization.
- Removed old configs.go and replaced it with a new value.go for better organization of configuration values.
- Updated Redis client initialization to use new configuration fields.
- Added Google OAuth functionality in dae-gateway with proper state management and token verification.
- Implemented gRPC client for dae-core service in dae-gateway, including health checks, user, order, and sheet management.
- Updated go.mod and go.sum files to include necessary dependencies for new features.

--- a/deployments/observability/otel-collector.yml
+++ b/deployments/observability/otel-collector.yml
@@ -18,7 +18,7 @@ exporters:
       insecure: true
 
   otlphttp/loki:
-    endpoint: "http://loki:3100/loki/otlp"
+    endpoint: "http://loki:3100/otlp"
     timeout: 5s
 
 service:
